syntax = "proto3";
package review;


service Review {
    rpc Create (ReviewRequest) returns (ReviewResponse) {}

    rpc Update(ReviewRequest) returns(ReviewResponse) {}
}

// Request message for creating a new fail mail
message ReviewRequest {
    string ID = 1;
    string Name = 2;
    string Email = 3;
    string Content = 4;
    bool Published = 5;
    uint64 Score = 6;
    string Category = 7;
}

// Response of fail mail
message ReviewResponse {
    string ID = 1;
    string Name = 2;
    string Email = 3;
    string Content = 4;
    bool Published = 5;
    uint64 Score = 6;
    string Category = 7;
    string CreatedAt = 8;
}
